--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -747,7 +747,7 @@ footer {
         display: block;
         padding: 25% 5%;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background-color: #E6D8CC;
         display: flex;
         flex-direction: column;
@@ -826,6 +826,44 @@ footer {
         color: black;
         font-size: 15px;
     }
+
+    .mob-team{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+
+
+    .col-team{
+        background-color: #EFE2DA;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 25px;
+        width: 300px;
+        height: 250px;
+    }
+
+    .img-team img{
+        width: 120px;
+        height: auto;
+        position: relative;
+    }
+
+    .name-team h1{
+        color: #0F2137;
+        font-size: 15px;
+    }
+
+    .name-team p{
+        color: black;
+        font-size: 10px;
+    }
+
+
 
 
 
